[tool.poetry]
name = "xaniablog"
version = "0.1.0"
description = "Matt Godbolt's personal blog generator"
authors = ["Matt Godbolt <matt@godbolt.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytz = "^2024.1"
markdown = "^3.5.2"
pygments = "^2.17.2"
awscli = "^1.32.91"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120